--- a/index.html
+++ b/index.html
@@ -3,20 +3,11 @@
 
   <head>
     <meta charset="utf-8">
-    <title> Sammy’s First Website </title>
-    <link rel="shortcut icon" type="image/jpg" href="images/small-profile.jpeg"
-      />
+    <title> Alexander Steinke </title>
   </head>
 
   <body style="margin:0;">
 
-    <!--First section-->
-    <div style="background-image: url('images/background.jpg');
-      background-size: cover; height:480px; padding-top:80px;
-      text-align:center;">
-      <img src="images/small-profile.jpeg" style="height:150px; border-radius:
-        50%; border: 10px solid #FEDE00;" alt="Digital Ocean’s mascot, a blue
-        smiling shark.">
       <h1 style="font-size:100px; color:white; margin:10px;">Sammy the Shark</h1>
       <p style="font-size:30px; color: white;"><em>Senior Selachimorpha at
           DigitalOcean</em></p>
@@ -24,10 +15,6 @@
           site</a></p>
     </div>
 
-    <!--Second section-->
-    <img src="images/large-profile.jpg" style="height:600px; margin:100px;
-      float: left;" alt="A pretend invisible person wearing a hat, glasses, and
-      coat." />
     <div style="height:600px; margin:100px;">
       <h1>Hello </h1>
       <p style="line-height: 2.0; font-size:20px;">Lorem ipsum dolor sit amet,
@@ -48,7 +35,7 @@
     <!--Footer-->
     <div style="height:auto; background-color:#F7C201;">
       <h1 style="color:white; padding:40px; margin:0; text-align:center;">Made
-        with 🤍 at DigitalOcean</h1>
+        by Alexander Steinke</h1>
     </div>
 
 
