--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
   <head>
-    <meta charset="utf-8">
     <title> Alexander Steinke </title>
   </head>
 
@@ -29,7 +28,7 @@
         sociis natoque penatibus et magnis dis. Enim tortor at auctor urna nunc
         id cursus metus.</p>
       <p style="line-height: 2.0; font-size:20px;">Email me at <a
-          href="mailto:Sammy@SampleEmail.com">Sammy@SampleEmail.com </a></p>
+          href="mailto:alexwsteinke@gmail.com">alexwsteinke@gmail.com </a></p>
     </div>
 
     <!--Footer-->
