--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
-  <body style="margin:0;">
+  <body>
 
-    <div style="height:600px; margin:100px;">
       <h1>Hello </h1>
       <p style="line-height: 2.0; font-size:20px;">Lorem ipsum dolor sit amet,
         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et magnis dis
@@ -18,7 +16,6 @@
         id cursus metus.</p>
       <p style="line-height: 2.0; font-size:20px;">Email me at <a
           href="mailto:alexwsteinke@gmail.com">alexwsteinke@gmail.com </a></p>
-    </div>
 
     <!--Footer-->
     <div style="height:auto; background-color:#F7C201;">
